--- a/FullApp_v1/V2_App/templates/landing.html
+++ b/FullApp_v1/V2_App/templates/landing.html
@@ -114,6 +114,7 @@
 
           <h3 class="text-dark mb-4" style="padding-left: 21px">Dashboard</h3>
           <div class="container">
+              
             <div
               class="d-sm-flex justify-content-between align-items-center mb-4"
             >
@@ -124,28 +125,48 @@
                 ><i class="fas fa-download fa-sm text-white-50"></i>&nbsp;Upload
                 CSV</a> -->
 
+                
+
                 <form action = '/visualize' enctype = "multipart/form-data" onsubmit=" return false;" >
                     <input id="file" type="file" name="static_file" />
-                    <button class="btn btn-primary btn-sm d-none d-sm-inline-block" id="upload-button" onclick="uploadFile(this.form)"> Upload </button>
+                    <button class="btn btn-primary btn-sm d-none d-sm-inline-block" style="position:relative;right:40 px" id="upload-button" onclick="uploadFile(this.form)"> Upload </button>
                     </form>
-                  <div id="static_file_response"> </div>
+                  <!-- <div id="static_file_response"> </div> -->
                  
                   <script type="text/javascript" src="/static/app.js"></script>
                   </script>
               
-            <!-- <a class="btn btn-default btn-lg" id="start" onclick="changeUploadStat()">Start!</a> -->
-
-            <form action="" method="post">
-                <button class="btn btn-primary btn-sm d-none d-sm-inline-block" name="foo" value="Do Something Man!" id="viz"><i class="fas fa-download fa-sm text-white-50"></i
-                    >&nbsp;Visualize</button>
-                
-            </form>
-
+              <!-- <a class="btn btn-default btn-lg" id="start" onclick="changeUploadStat()">Start!</a> -->
 
             
 
 
+            
+
             </div>
+            </div>
+
+            <div class="row" style="width:85%;">
+              <div class="col-md-6 col-xl-3 mb-4">
+                
+                  
+                    <div class="row align-items-center no-gutters">
+                      <form action="" method="post">
+                        <button class="btn btn-primary btn-sm d-none d-sm-inline-block" name="foo" value="Do Something Man!" style="position:relative;left:20 px"id="viz"><i class="fas fa-download fa-sm text-white-50"></i
+                            >&nbsp;Visualize</button>
+                        
+                    </form>
+                      
+                    </div>
+                  
+                
+              </div>
+              
+              
+            
+          </div>
+            </div>
+
             <div class="row" style="width:85%;">
               <div class="col-md-6 col-xl-3 mb-4">
                 <div class="card shadow border-start-primary py-2">
@@ -158,7 +179,7 @@
                           <span>Current&nbsp;Price</span>
                         </div>
                         <div class="text-dark fw-bold h5 mb-0">
-                          <span>$4.989</span>
+                          <span>${{cardVals[0]}}</span>
                         </div>
                       </div>
                       <div class="col-auto">
@@ -179,7 +200,7 @@
                           <span>High</span>
                         </div>
                         <div class="text-dark fw-bold h5 mb-0">
-                          <span>$5.0</span>
+                          <span>${{cardVals[1]}}</span>
                         </div>
                       </div>
                       <div class="col-auto">
@@ -200,7 +221,7 @@
                           <span>Low</span>
                         </div>
                         <div class="text-dark fw-bold h5 mb-0">
-                          <span>$4.5</span>
+                          <span>${{cardVals[2]}}</span>
                         </div>
                       </div>
                       <div class="col-auto">
@@ -223,14 +244,12 @@
                         <div class="row g-0 align-items-center">
                           <div class="col-auto">
                             <div class="text-dark fw-bold h5 mb-0 me-3">
-                              <span>$ 29 B</span>
+                              <span>{{cardVals[3]}}</span>
                             </div>
                           </div>
                         </div>
                       </div>
-                      <div class="col-auto">
-                        <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                      </div>
+                      <!-- <div cf== -->
                     </div>
                   </div>
                 </div>
@@ -264,7 +283,7 @@
                         padding-right: 9px;
                         padding-bottom: 4.5px;
                         padding-left: 9px;
-                      ">&nbsp;1d</button>
+                      ">&nbsp;5d</button>
 
                         <button class="btn btn-primary" name="foox" value="2" style="
                         font-size: 12px;
