--- a/FullApp_v1/V2_App/templates/indicators.html
+++ b/FullApp_v1/V2_App/templates/indicators.html
@@ -47,7 +47,7 @@
       </header>
       <div class="l-navbar" id="nav-bar">
           <nav class="nav">
-              <div> <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">BBBootstrap</span> </a>
+              <div> <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">Hack Inversion</span> </a>
                   <div class="nav_list">  
                       <a href="/" class="nav_link"> <i class='bx bx-user nav_icon'></i> 
                           <span class="nav_name">Dashboard</span> </a> 
@@ -113,7 +113,7 @@
 
 
 
-          <h3 class="text-dark mb-4" style="padding-left: 21px">Dashboard</h3>
+          <h3 class="text-dark mb-4" style="padding-left: 21px">Indicators</h3>
           <div class="container-fluid">
             <div
               class="d-sm-flex justify-content-between align-items-center mb-4"
@@ -131,7 +131,7 @@
                     <h6 class="text-primary fw-bold m-0">
                       SMA-EMA-Closed&nbsp;
                     </h6>
-                    <div
+                    <!-- <div
                       class="btn-group"
                       role="group"
                       style="
@@ -182,8 +182,8 @@
                                               padding-left: 9px;
                                           ">&nbsp;12m</button>
                       
-                   </form>
-                    </div>
+                   </form> -->
+                    <!-- </div> -->
                   </div>
 
                   <divclass="card-body">
@@ -203,7 +203,7 @@
                           <h6 class="text-primary fw-bold m-0">
                             Prices&nbsp;
                           </h6>
-                          <div
+                          <!-- <div
                             class="btn-group"
                             role="group"
                             style="
@@ -255,7 +255,7 @@
                                                 ">&nbsp;12m</button>
                             
                          </form>
-                          </div>
+                          </div> -->
                         </div>
       
                         <divclass="card-body">
@@ -275,7 +275,7 @@
                           <h6 class="text-primary fw-bold m-0">
                             MACD&nbsp;
                           </h6>
-                          <div
+                          <!-- <div
                             class="btn-group"
                             role="group"
                             style="
@@ -327,7 +327,7 @@
                                                 ">&nbsp;12m</button>
                             
                          </form>
-                          </div>
+                          </div> -->
                         </div>
       
                         <divclass="card-body">
