--- a/FullApp_v1/V2_App/templates/prediction.html
+++ b/FullApp_v1/V2_App/templates/prediction.html
@@ -47,7 +47,7 @@
       </header>
       <div class="l-navbar" id="nav-bar">
           <nav class="nav">
-              <div> <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">BBBootstrap</span> </a>
+              <div> <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">Hack Inversion</span> </a>
                   <div class="nav_list">  
                       <a href="/" class="nav_link"> <i class='bx bx-user nav_icon'></i> 
                           <span class="nav_name">Dashboard</span> </a> 
@@ -128,7 +128,7 @@
                     <h6 class="text-primary fw-bold m-0">
                       LSTM&nbsp;
                     </h6>
-                    <div
+                    <!-- <div
                       class="btn-group"
                       role="group"
                       style="
@@ -211,7 +211,7 @@
                       >
                         12m
                       </button>
-                    </div>
+                    </div> -->
                   </div>
 
                   <divclass="card-body">
@@ -232,7 +232,7 @@
                       <h6 class="text-primary fw-bold m-0">
                         ARIMA+EMS&nbsp;
                       </h6>
-                      <div
+                      <!-- <div
                         class="btn-group"
                         role="group"
                         style="
@@ -315,7 +315,7 @@
                         >
                           12m
                         </button>
-                      </div>
+                      </div> -->
                     </div>
   
                     <divclass="card-body">
@@ -335,7 +335,7 @@
                         <h6 class="text-primary fw-bold m-0">
                           SVR&nbsp;
                         </h6>
-                        <div
+                        <!-- <div
                           class="btn-group"
                           role="group"
                           style="
@@ -418,7 +418,7 @@
                           >
                             12m
                           </button>
-                        </div>
+                        </div> -->
                       </div>
     
                       <divclass="card-body">
