--- a/FullApp_v1/V2_App/templates/landing.html
+++ b/FullApp_v1/V2_App/templates/landing.html
@@ -39,7 +39,13 @@
     <!-- <link rel="stylesheet" href="assets/css/untitled.css"> -->
   </head>
 
-  <body id="page-top">
+  <body >
+    <div class="jumbotron">
+      <h1>Dashboard</h1>
+      <!-- <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive,
+      mobile-first projects on the web.</p> -->
+    </div>
+    
     <div id="wrapper">
         <header class="header" id="header">
             <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
@@ -47,7 +53,7 @@
         </header>
         <div class="l-navbar" id="nav-bar">
             <nav class="nav">
-                <div> <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">BBBootstrap</span> </a>
+                <div> <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">Hack Inversion</span> </a>
                     <div class="nav_list">  
                         <a href="/" class="nav_link"> <i class='bx bx-user nav_icon'></i> 
                             <span class="nav_name">Dashboard</span> </a> 
@@ -110,9 +116,10 @@
 
 
       <div class="d-flex flex-column">
+        
         <div id="content">
 
-          <h3 class="text-dark mb-4" style="padding-left: 21px">Dashboard</h3>
+          
           <div class="container">
               
             <div
@@ -127,14 +134,7 @@
 
                 
 
-                <form action = '/visualize' enctype = "multipart/form-data" onsubmit=" return false;" >
-                    <input id="file" type="file" name="static_file" />
-                    <button class="btn btn-primary btn-sm d-none d-sm-inline-block" style="position:relative;right:40 px" id="upload-button" onclick="uploadFile(this.form)"> Upload </button>
-                    </form>
-                  <!-- <div id="static_file_response"> </div> -->
-                 
-                  <script type="text/javascript" src="/static/app.js"></script>
-                  </script>
+                
               
               <!-- <a class="btn btn-default btn-lg" id="start" onclick="changeUploadStat()">Start!</a> -->
 
@@ -151,21 +151,86 @@
                 
                   
                     <div class="row align-items-center no-gutters">
-                      <form action="" method="post">
-                        <button class="btn btn-primary btn-sm d-none d-sm-inline-block" name="foo" value="Do Something Man!" style="position:relative;left:20 px"id="viz"><i class="fas fa-download fa-sm text-white-50"></i
-                            >&nbsp;Visualize</button>
-                        
-                    </form>
+                      
                       
                     </div>
                   
                 
-              </div>
+              <!-- </div>
               
               
             
-          </div>
+          </div> -->
             </div>
+            </div>
+
+
+            <div class="row" style="width:85%;">
+              <div class="col-md-12 col-xl-6 mb-4">
+                <div class="card shadow border-start-primary py-2">
+                  <div class="card-body">
+                    <div class="row align-items-center no-gutters">
+                      <div class="col me-2">
+                        <div
+                          class="text-uppercase text-primary fw-bold text-xs mb-1"
+                        >
+                          <span>Upload&nbsp;File</span>
+                        </div>
+                        <div class="text-dark fw-bold h5 mb-0">
+                          <span>
+
+                            <form enctype = "multipart/form-data" onsubmit=" return false;" >
+                              <input id="file" type="file" name="static_file" />
+                              <button class="btn btn-primary btn-sm d-none d-sm-inline-block"  id="upload-button" onclick="uploadFile(this.form)"> Upload </button>
+                              </form>
+                            <!-- <div id="static_file_response"> </div> -->
+                           
+                            <script type="text/javascript" src="/static/app.js"></script>
+                            </script>
+
+                          </span>
+                        </div>
+                      </div>
+                      
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-12 col-xl-6 mb-4">
+                <div class="card shadow border-start-success py-2">
+                  <div class="card-body">
+                    <div class="row align-items-center no-gutters">
+                      <div class="col me-4">
+                        <div
+                          class="text-uppercase text-success fw-bold text-xs mb-1"
+                        >
+                          <span>Days to Forecast</span>
+                        </div>
+                        <div class="text-dark fw-bold h5 mb-0">
+                          <span>
+                            <form action="" method="post">
+                              <input type="number" id="NumDays" name="Num"  placeholder="Number of Days">
+                              <!-- <button class="btn btn-primary btn-sm d-none d-sm-inline-block" name="foo" value="Do Something Man!" style="position:relative;left:20 px"id="viz"><i class="fas fa-download fa-sm text-white-50"></i
+                                  >&nbsp;Visualize</button> -->
+                              
+                          </form>
+
+
+
+                          </span>
+                        </div>
+                      </div>
+                      
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+            </div>
+
+
+
+
 
             <div class="row" style="width:85%;">
               <div class="col-md-6 col-xl-3 mb-4">
@@ -325,7 +390,9 @@
                   <div class="card-body" style="width:90%;">
                     <canvas id="myChart"></canvas>
                   </div>
-                  <div id='myDiv'></div>
+                  <div class="d-flex flex-column">
+                    <div id='myDiv' style="padding-left: 15%;" ></div>
+                  </div>
                 </div>
               </div>
             </div>
