--- a/FullApp_v1/V2_App/templates/models.html
+++ b/FullApp_v1/V2_App/templates/models.html
@@ -26,7 +26,7 @@
                 </header>
                 <div class="l-navbar" id="nav-bar">
                     <nav class="nav">
-                        <div> <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">BBBootstrap</span> </a>
+                        <div> <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'></i> <span class="nav_logo-name">Hack Inversion</span> </a>
                             <div class="nav_list">  
                                 <a href="/" class="nav_link"> <i class='bx bx-user nav_icon'></i> 
                                     <span class="nav_name">Dashboard</span> </a> 
@@ -93,7 +93,7 @@
                         document.write({{best}})
                     </script> -->
                     <div class="row mb-3" style="width:80%;">
-                        <div class="col-lg-4" style="background: rgba(49,167,125,0.69);">
+                        <div class="col-lg-4">
                             <div class="card mb-3"></div>
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
@@ -104,8 +104,8 @@
                                     <!-- <div class="progress progress-sm mb-3">
                                         <div class="progress-bar bg-danger" id="" aria-valuenow="{{LSTM[0]}}" aria-valuemin="0" aria-valuemax="2" style="width: {{LSTM[0]}}%;"><span class="visually-hidden">{{LSTM[0]}}%</span></div>
                                     </div> -->
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="{{LSTM[0]}}" aria-valuemin="0" aria-valuemax="4"></div>
+                                    <div class="progress progress-sm mb-3">
+                                        <div class="progress-bar bg-warning" aria-valuenow="{{LSTM[0]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{LSTM[0]}}%;"><span class="visually-hidden">{{LSTM[0]}}%</span></div>
                                     </div>
 
                                     <!-- <script>
@@ -114,14 +114,14 @@
 
                                     
 
-                                    <h4 class="small fw-bold">AIC<span class="float-end">{{LSTM[1]}}</span></h4>
+                                    <h4 class="small fw-bold">MAPE<span class="float-end">{{LSTM[1]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
                                         <div class="progress-bar bg-warning" aria-valuenow="{{LSTM[1]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{LSTM[1]}}%;"><span class="visually-hidden">{{LSTM[1]}}%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">M-DM Test<span class="float-end">{{LSTM[2]}}</span></h4>
+                                    <!-- <h4 class="small fw-bold">M-DM Test<span class="float-end">{{LSTM[2]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
                                         <div class="progress-bar bg-primary" aria-valuenow="{{LSTM[2]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{LSTM[2]}}%;"><span class="visually-hidden">{{LSTM[2]}}%</span></div>
-                                    </div>
+                                    </div> -->
                                     <a href="{{ url_for('static',filename='outputs/lstmOutput.csv') }}" download>
                                         <button class="btn btn-primary" type="button" style="font-size: 12px;">Download</button>
                                     </a>
@@ -133,21 +133,21 @@
                             <div class="card mb-3"></div>
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="text-primary fw-bold m-0">GARCH + ARIMA + EMS</h6>
+                                    <h6 class="text-primary fw-bold m-0">ARIMA + EMS</h6>
                                 </div>
                                 <div class="card-body">
                                     <h4 class="small fw-bold">MAE<span class="float-end">{{threeModels[0]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
                                         <div class="progress-bar bg-danger" aria-valuenow="{{threeModels[0]}}" aria-valuemin="0" aria-valuemax="2" style="width: {{threeModels[0]}}%;"><span class="visually-hidden">{{threeModels[0]}}%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">AIC<span class="float-end">{{threeModels[1]}}</span></h4>
+                                    <h4 class="small fw-bold">MAPE<span class="float-end">{{threeModels[1]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
                                         <div class="progress-bar bg-warning" aria-valuenow="{{threeModels[1]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{threeModels[1]}}%;"><span class="visually-hidden">{{threeModels[1]}}%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">M-DM Test<span class="float-end">{{threeModels[2]}}</span></h4>
+                                    <!-- <h4 class="small fw-bold">M-DM Test<span class="float-end">{{threeModels[2]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
                                         <div class="progress-bar bg-primary" aria-valuenow="{{threeModels[2]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{threeModels[2]}}%;"><span class="visually-hidden">{{threeModels[2]}}%</span></div>
-                                    </div>
+                                    </div> -->
                                     <a href="{{ url_for('static',filename='outputs/statsOutput.csv') }}" download>
                                         <button class="btn btn-primary" type="button" style="font-size: 12px;">Download</button>
                                     </a>
@@ -165,14 +165,14 @@
                                     <div class="progress progress-sm mb-3">
                                         <div class="progress-bar bg-danger" aria-valuenow="{{SVR[0]}}" aria-valuemin="0" aria-valuemax="2" style="width: {{SVR[0]}}%;"><span class="visually-hidden">{{SVR[0]}}%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">AIC<span class="float-end">{{SVR[1]}}</span></h4>
+                                    <h4 class="small fw-bold">MAPE<span class="float-end">{{SVR[1]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
                                         <div class="progress-bar bg-warning" aria-valuenow="{{SVR[1]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{SVR[1]}}%;"><span class="visually-hidden">{{SVR[1]}}%</span></div>
                                     </div>
-                                    <h4 class="small fw-bold">M-DM Test<span class="float-end">{{SVR[2]}}</span></h4>
+                                    <!-- <h4 class="small fw-bold">M-DM Test<span class="float-end">{{SVR[2]}}</span></h4>
                                     <div class="progress progress-sm mb-3">
                                         <div class="progress-bar bg-primary" aria-valuenow="{{SVR[2]}}" aria-valuemin="0" aria-valuemax="100" style="width: {{SVR[2]}}%;"><span class="visually-hidden">{{SVR[2]}}%</span></div>
-                                    </div>
+                                    </div> -->
                                     <a href="{{ url_for('static',filename='outputs/svrOutput.csv') }}" download>
                                         <button class="btn btn-primary" type="button" style="font-size: 12px;">Download</button>
                                     </a>
