--- a/FullApp_v1/V2_App/templates/models.html
+++ b/FullApp_v1/V2_App/templates/models.html
@@ -93,7 +93,7 @@
                         document.write({{best}})
                     </script> -->
                     <div class="row mb-3" style="width:80%;">
-                        <div class="col-lg-4">
+                        <div class="col-lg-4" style='background-color: {{bgColors[0]}};'>
                             <div class="card mb-3"></div>
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
@@ -129,7 +129,7 @@
                             </div>
                         </div>
                     
-                        <div class="col-lg-4">
+                        <div class="col-lg-4" style="background-color: {{bgColors[1]}};">
                             <div class="card mb-3"></div>
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
@@ -154,7 +154,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-4" style="background-color: {{bgColors[2]}};">
                             <div class="card mb-3"></div>
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
